:bug: Fix whitespace not preserved in posts and descriptions.

--- a/assets/styles/global/modifiers/_text.scss
+++ b/assets/styles/global/modifiers/_text.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.has-preserved-whitespace {
+  white-space: pre-wrap;
+}
+
 .is-size-8 {
   font-size: 0.50rem;
 }
